<resources>
    <string name="app_name">FitnessApp</string>
    <string name="welcome_header_1">Пожалуй, лучший фитнес трекер в ДВФУ</string>
    <string name="welcome_header_2">Созданный студентами</string>
    <string name="welcome_button">Зарегистрироваться</string>
    <string name="welcome_question">Уже есть аккаунт?</string>
    <string name="login">Логин</string>
    <string name="name">Имя или никнейм</string>
    <string name="password">Пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="agreement">Нажимая на кнопку, вы соглашаетесь с политикой конфиденциальности и обработки персональных данных, а также принимаете пользовательское соглашение</string>
    <string name="radio_man">Мужской</string>
    <string name="radio_woman">Женский</string>
    <string name="radio_other">Другое</string>
    <string name="sex">Пол</string>
    <string name="login_button">Войти</string>
    <string name="image_bicyclist">bicyclist</string>
    <string name="activity">Активность</string>
    <string name="profile">Профиль</string>
    <string name="tab_first">Моя</string>
    <string name="tab_second">Пользователей</string>
    <string name="nickname">\@van_darkholme</string>
    <string name="distance">14.32 км</string>
    <string name="date">14 часов назад</string>
    <string name="period">1 час 42 мин</string>
    <string name="start">Старт</string>
    <string name="time_start">14:49</string>
    <string name="finish">Финиш</string>
    <string name="time_finish">16:31</string>
    <string name="comment">Комментарий</string>
    <string name="delete">Удалить</string>
    <string name="share">Поделиться</string>
    <string name="text_one">Время потренить</string>
    <string name="text_two">Нажимай на кнопку ниже и начинаем трекать активность</string>
    <string name="mine">Моя</string>
    <string name="users">Пользователей</string>
    <string name="add_button">Add button</string>
    <string name="change_password">Изменить пароль</string>
    <string name="exit">Выйти</string>
</resources>